infrastructure/kubernetes/4-backend-deployment/2-service.yaml
---
apiVersion: v1
kind: Service
metadata:
    name: honojs
    namespace: bones
spec:
    selector:
        app: honojs
    type: ClusterIP
    ports:
        - port: 80 # Match this with ingress
          targetPort: 5050
          protocol: TCP
