infrastructure/kubernetes/4-backend-deployment/3-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: honojs
    namespace: bones
    annotations:
        kubernetes.io/ingress.class: external-ingress # This should match /infrastructure/values/external-nginx.yaml
        nginx.ingress.kubernetes.io/ssl-redirect: "false"
        nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
spec:
    ingressClassName: external-ingress # This should match /infrastructure/values/external-nginx.yaml
    rules:
        - host: api.akashdas.site
          http:
              paths:
                  - path: /
                    pathType: Prefix
                    backend:
                        service:
                            name: honojs
                            port:
                                number: 80
